fix: Mise à jour dockerisation après refactorisation modulaire
✅ Problèmes résolus:
- Dockerfile mis à jour pour copier tous les modules
- Structure modulaire (commands/, config/, models/, persistence/, utils/)
- Correction erreur syntaxe dans handlers.py (global declaration)
- docker-compose.yml amélioré avec health checks

🚀 Nouvelles fonctionnalités:
- .dockerignore pour optimiser builds
- .env.example avec documentation complète
- Makefile avec commandes utiles (build, run, test)
- Script de validation validate_docker_structure.py
- Sécurité: utilisateur non-root dans le conteneur
- Health checks et monitoring améliorés

🔧 Configuration:
- Support toutes variables d'environnement
- Volumes pour données et logs
- Ressources limitées pour conteneur
- Mode développement et production

Closes #10

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,63 @@
-# Token du bot Discord (obligatoire)
-DISCORD_TOKEN=your_bot_token_here
+# Discord Reminder Bot - Configuration Environment
+# Copiez ce fichier vers .env et remplissez vos valeurs
 
-# Intervalle entre les rappels automatiques (défaut: 24 heures)
-# Exemples :
-#   0.05 = 3 minutes (pour tests rapides)
-#   0.1  = 6 minutes  
-#   0.25 = 15 minutes
-#   0.5  = 30 minutes
-#   1    = 1 heure
-#   24   = 24 heures (défaut)
+# ===== OBLIGATOIRE =====
+# Token Discord de votre bot (obligatoire)
+# Obtenez-le sur: https://discord.com/developers/applications
+DISCORD_TOKEN=your_discord_bot_token_here
+
+# ===== CONFIGURATION DES RAPPELS =====
+# Intervalle entre les rappels automatiques (en heures)
+# Valeur par défaut: 24 heures
 REMINDER_INTERVAL_HOURS=24
 
-# Rôles autorisés à gérer le bot (défaut: Admin,Moderateur,Coach)
-ADMIN_ROLES=Admin,Moderateur,Coach
-
-# Utiliser un canal séparé pour les rappels? (défaut: false)
-# false = rappels dans le même canal que le match
-# true = rappels dans un canal dédié
+# Utiliser un canal séparé pour les rappels (true/false)
+# Si false, les rappels sont envoyés dans le même canal que le match
+# Valeur par défaut: false
 USE_SEPARATE_REMINDER_CHANNEL=false
 
-# Nom du canal de rappels si USE_SEPARATE_REMINDER_CHANNEL=true (défaut: rappels-matchs)
+# Nom du canal pour les rappels (seulement si USE_SEPARATE_REMINDER_CHANNEL=true)
+# Le canal sera créé automatiquement s'il n'existe pas
+# Valeur par défaut: rappels-matchs
 REMINDER_CHANNEL_NAME=rappels-matchs
+
+# ===== PERMISSIONS =====
+# Rôles autorisés à utiliser les commandes administratives
+# Séparez plusieurs rôles par des virgules
+# Valeur par défaut: Admin,Moderateur,Coach
+ADMIN_ROLES=Admin,Moderateur,Coach
+
+# ===== LOGGING =====
+# Niveau de logging (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+# Valeur par défaut: INFO
+LOG_LEVEL=INFO
+
+# Sauvegarder les logs dans un fichier (true/false)
+# Valeur par défaut: true
+LOG_TO_FILE=true
+
+# ===== MODE TEST (OPTIONNEL) =====
+# Mode test avec intervalles courts (true/false)
+# En mode test, l'intervalle est en minutes au lieu d'heures
+# Utilisez uniquement pour les tests de développement
+# Valeur par défaut: false
+TEST_MODE=false
+
+# ===== EXEMPLES DE CONFIGURATION =====
+
+# Configuration simple (canal unique):
+# DISCORD_TOKEN=your_token_here
+# REMINDER_INTERVAL_HOURS=12
+# ADMIN_ROLES=Admin,Moderateur
+
+# Configuration avec canal séparé:
+# DISCORD_TOKEN=your_token_here
+# USE_SEPARATE_REMINDER_CHANNEL=true
+# REMINDER_CHANNEL_NAME=match-reminders
+# REMINDER_INTERVAL_HOURS=6
+
+# Configuration pour développement/test:
+# DISCORD_TOKEN=your_token_here
+# TEST_MODE=true
+# REMINDER_INTERVAL_HOURS=1
+# LOG_LEVEL=DEBUG
