--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,6 @@ Thumbs.db
 *.log
 
 # Match data (optional - comment out if you want to track it)
-# watched_matches.json
+#watched_matches.json
+
+.coverage
