🔧 Ignore watched_matches.json du dépôt Git
- Ajout de watched_matches.json au .gitignore
- Suppression du tracking Git pour éviter les conflits en développement local
- Le fichier reste présent localement mais n'est plus versionné
- Améliore l'expérience de développement en évitant les changements fréquents

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ Thumbs.db
 # Logs
 *.log
 
-# Match data (optional - comment out if you want to track it)
-#watched_matches.json
+# Match data (changes frequently in local development)
+watched_matches.json
 
 .coverage
