fix: Update terminology from 'match' to 'event' in configuration and documentation

--- a/.env.example
+++ b/.env.example
@@ -12,14 +12,14 @@ DISCORD_TOKEN=your_discord_bot_token_here
 REMINDER_INTERVAL_HOURS=24
 
 # Utiliser un canal séparé pour les rappels (true/false)
-# Si false, les rappels sont envoyés dans le même canal que le match
+# Si false, les rappels sont envoyés dans le même canal que l'evenement
 # Valeur par défaut: false
 USE_SEPARATE_REMINDER_CHANNEL=false
 
 # Nom du canal pour les rappels (seulement si USE_SEPARATE_REMINDER_CHANNEL=true)
 # Le canal sera créé automatiquement s'il n'existe pas
-# Valeur par défaut: rappels-matchs
-REMINDER_CHANNEL_NAME=rappels-matchs
+# Valeur par défaut: rappels-events
+REMINDER_CHANNEL_NAME=rappels-events
 
 # ===== PERMISSIONS =====
 # Rôles autorisés à utiliser les commandes administratives
@@ -56,7 +56,7 @@ TEST_MODE=false
 # Configuration avec canal séparé:
 # DISCORD_TOKEN=your_token_here
 # USE_SEPARATE_REMINDER_CHANNEL=true
-# REMINDER_CHANNEL_NAME=match-reminders
+# REMINDER_CHANNEL_NAME=event-reminders
 # REMINDER_INTERVAL_HOURS=6
 
 # Configuration pour développement/test:
