--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,24 +17,35 @@ on:
       - 'LICENSE'
   workflow_dispatch: # Allow manual triggers
 
+env:
+  # Global environment variables to optimize pip
+  PIP_DISABLE_PIP_VERSION_CHECK: 1
+  PIP_NO_CACHE_DIR: 0
+  PYTHONUNBUFFERED: 1
+
 jobs:
   lint-and-format:
     name: Code Quality Checks
     runs-on: ubuntu-latest
-    
+    timeout-minutes: 15
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
     - name: Set up Python 3.13
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.13'
         cache: 'pip'
-    
+        cache-dependency-path: |
+          requirements.txt
+          requirements-dev.txt
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install -r requirements-dev.txt
         pip install audioop-lts  # Python 3.13 compatibility
     
@@ -68,23 +79,38 @@ jobs:
         safety check
       continue-on-error: true
 
+    - name: Upload security reports
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: security-reports
+        path: |
+          bandit-report.json
+          safety-report.json
+        retention-days: 30
+
   test:
     name: Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     strategy:
       matrix:
         python-version: ['3.11', '3.12', '3.13']
-    
+      fail-fast: false  # Continue other matrix jobs even if one fails
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-    
+        cache-dependency-path: |
+          requirements.txt
+          requirements-dev.txt
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -106,18 +132,19 @@ jobs:
     
     - name: Run tests with coverage
       run: |
-        pytest --cov=. --cov-report=xml --cov-report=term-missing --cov-report=html
+        pytest --cov=. --cov-report=xml --cov-report=term-missing --cov-report=html --junitxml=pytest.xml
       env:
         PYTHONPATH: .
     
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.13'
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Upload test results
       if: always()
@@ -134,7 +161,8 @@ jobs:
     name: Docker Build Test
     runs-on: ubuntu-latest
     needs: [lint-and-format, test]
-    
+    timeout-minutes: 15
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -152,11 +180,16 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64
-    
+        outputs: type=docker,dest=/tmp/discord-bot.tar
+
+    - name: Load Docker image
+      run: |
+        docker load -i /tmp/discord-bot.tar
+
     - name: Test Docker image
       run: |
         # Test that the image can be created and basic imports work
-        docker run --rm --env DISCORD_TOKEN=test_token discord-reminder-bot:test python -c "
+        timeout 60s docker run --rm --env DISCORD_TOKEN=test_token discord-reminder-bot:test python -c "
         import sys
         print(f'Python version: {sys.version}')
         
@@ -188,6 +221,7 @@ jobs:
     name: Integration Tests
     runs-on: ubuntu-latest
     needs: [docker-build]
+    timeout-minutes: 10
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
@@ -195,11 +229,14 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python 3.13
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.13'
         cache: 'pip'
-    
+        cache-dependency-path: |
+          requirements.txt
+          requirements-dev.txt
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -214,3 +251,24 @@ jobs:
         DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN_TEST }}
         TEST_MODE: true
         LOG_LEVEL: DEBUG
+
+  summary:
+    name: CI Summary
+    runs-on: ubuntu-latest
+    if: always()
+    needs: [lint-and-format, test, docker-build]
+
+    steps:
+    - name: Check results
+      run: |
+        echo "## CI Results Summary" >> $GITHUB_STEP_SUMMARY
+        echo "- Lint and Format: ${{ needs.lint-and-format.result }}" >> $GITHUB_STEP_SUMMARY
+        echo "- Tests: ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
+        echo "- Docker Build: ${{ needs.docker-build.result }}" >> $GITHUB_STEP_SUMMARY
+        
+        if [ "${{ needs.lint-and-format.result }}" = "failure" ] || [ "${{ needs.test.result }}" = "failure" ] || [ "${{ needs.docker-build.result }}" = "failure" ]; then
+          echo "❌ CI failed - see individual job logs for details" >> $GITHUB_STEP_SUMMARY
+          exit 1
+        else
+          echo "✅ All CI checks passed successfully" >> $GITHUB_STEP_SUMMARY
+        fi
