--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python 3.13
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.13'
         cache: 'pip'
@@ -103,7 +103,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
@@ -135,10 +135,12 @@ jobs:
         pytest --cov=. --cov-report=xml --cov-report=term-missing --cov-report=html --junitxml=pytest.xml
       env:
         PYTHONPATH: .
-    
+        TEST_MODE: true
+        DISCORD_TOKEN: test_token_for_ci
+
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.13'
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
         flags: unittests
@@ -229,7 +231,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python 3.13
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.13'
         cache: 'pip'
