--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,64 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 
+[tool.pytest.ini_options]
+# Configuration for pytest
+minversion = "6.0"
+addopts = [
+    "-ra",
+    "--strict-markers",
+    "--strict-config",
+    "--disable-warnings",
+    "--tb=short"
+]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests"
+]
+
+[tool.pytest_env]
+# Environment variables for pytest-env plugin
+DISCORD_TOKEN = "test_token_for_pytest"
+TEST_MODE = "true"
+LOG_LEVEL = "DEBUG"
+LOG_TO_FILE = "false"
+
+[tool.coverage.run]
+source = ["."]
+omit = [
+    "tests/*",
+    "*/tests/*",
+    "venv/*",
+    ".venv/*",
+    "*/venv/*",
+    "*/.venv/*",
+    "htmlcov/*",
+    "scripts/*",
+    "build/*",
+    "dist/*"
+]
+branch = true
+
+[tool.coverage.report]
+precision = 2
+show_missing = true
+skip_covered = false
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:"
+]
+
 [tool.mypy]
 python_version = "3.8"
 warn_return_any = true
@@ -51,34 +109,6 @@ show_error_codes = true
 module = "discord.*"
 ignore_missing_imports = true
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = "test_*.py"
-python_classes = "Test*"
-python_functions = "test_*"
-asyncio_mode = "auto"
-addopts = "--cov=. --cov-report=term-missing --cov-report=html"
-
-[tool.coverage.run]
-source = ["."]
-omit = [
-    "*/tests/*",
-    "*/.venv/*",
-    "*/venv/*",
-    "*/env/*",
-    "*/__pycache__/*",
-    "*/logs/*",
-    "setup.py"
-]
-
-[tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "if self.debug:",
-    "if settings.DEBUG",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if 0:",
-    "if __name__ == .__main__.:"
-]
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
