--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,10 +17,12 @@ mypy==1.9.0                   # Static type checking (updated)
 bandit==1.7.7                 # Security linter (updated)
 safety==3.1.0                 # Dependency vulnerability scanner (updated for compatibility)
 
-# Testing (if tests are added in the future)
+# Testing framework and plugins
 pytest==8.1.1                # Testing framework (updated)
 pytest-asyncio==0.23.6       # Async testing support (updated)
 pytest-cov==5.0.0            # Coverage reporting (updated)
+pytest-env==1.1.3            # Environment variable support for pytest
+pytest-xdist==3.5.0          # Parallel test execution
 coverage==7.4.4              # Coverage analysis (updated)
 
 # Pre-commit hooks
