--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ on:
 env:
   # Global environment variables to optimize pip
   PIP_DISABLE_PIP_VERSION_CHECK: 1
-  PIP_NO_CACHE_DIR: 0
+  PIP_NO_CACHE_DIR: 1
   PYTHONUNBUFFERED: 1
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python 3.13
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.13'
         cache: 'pip'
@@ -69,14 +69,14 @@ jobs:
     
     - name: Security linting (bandit)
       run: |
-        bandit -r . -f json -o bandit-report.json || true
-        bandit -r . --severity-level medium
+        bandit -r . -f json -o bandit-report.json --exclude ./tests,./venv,./.venv || true
+        bandit -r . --severity-level medium --exclude ./tests,./venv,./.venv || echo "Bandit found security issues"
       continue-on-error: true
     
     - name: Dependency vulnerability scan (safety)
       run: |
         safety check --json --output safety-report.json || true
-        safety check
+        safety check --ignore 70612 || echo "Safety found vulnerabilities"
       continue-on-error: true
 
     - name: Upload security reports
@@ -103,7 +103,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
@@ -140,13 +140,14 @@ jobs:
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.13'
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
         token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true
 
     - name: Upload test results
       if: always()
@@ -173,7 +174,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
     
     - name: Build Docker image (test)
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile
@@ -183,6 +184,8 @@ jobs:
         cache-to: type=gha,mode=max
         platforms: linux/amd64
         outputs: type=docker,dest=/tmp/discord-bot.tar
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
 
     - name: Load Docker image
       run: |
@@ -231,7 +234,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python 3.13
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.13'
         cache: 'pip'
