fix: Update docker-compose syntax for GitHub Actions
- Change 'docker-compose config' to 'docker compose config'
- Update to modern Docker Compose V2 syntax in CI
- Simplify healthcheck in docker-compose.yml to match Dockerfile
- This fixes the 'docker-compose: command not found' error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,8 +239,8 @@ jobs:
         # Create minimal test environment
         echo "DISCORD_TOKEN=test_token" > .env
         
-        # Test docker-compose configuration
-        docker-compose config
+        # Test docker compose configuration (new syntax)
+        docker compose config
         
         echo "✓ Docker Compose configuration is valid"
 
