--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,9 @@ services:
       # Logs persistence (optional)
       - ./logs:/app/logs
     
-    # Health check - verify Discord bot can import core modules and instantiate
+    # Health check - verify basic imports work
     healthcheck:
-      test: ["CMD", "python", "-c", "import discord; from bot import create_bot; bot = create_bot(); print('Health check passed'); import sys; sys.exit(0)"]
+      test: ["CMD", "python", "-c", "import discord; import bot; print('Health check passed')"]
       interval: 30s
       timeout: 10s
       retries: 3
