fix: Add PYTHONPATH to integration tests and module structure
- Add PYTHONPATH: . to integration test environment
- Create __init__.py for tests/integration module
- This fixes ModuleNotFoundError for 'models' and 'utils' imports
- Ensures proper Python module discovery in CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,6 +275,7 @@ jobs:
       run: |
         pytest tests/integration/ -v --tb=short
       env:
+        PYTHONPATH: .
         DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN_TEST }}
         TEST_MODE: true
         LOG_LEVEL: DEBUG
