refactor: Update configuration and logging for improved clarity and consistency

--- a/.env.example
+++ b/.env.example
@@ -122,11 +122,11 @@ DATABASE_PATH=discord_bot.db
 
 # Enable automatic migration from JSON to SQLite (true/false)
 # Default: true
-AUTO_MIGRATE=true
+AUTO_MIGRATE=false
 
 # Backup JSON file when migrating to SQLite (true/false)
 # Default: true
-BACKUP_JSON_ON_MIGRATION=true
+BACKUP_JSON_ON_MIGRATION=false
 
 # ===== FEATURE FLAGS CONFIGURATION =====
 # Enable feature flags system (true/false)
