refactor: Add timezone support and date utilities for improved date handling

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,12 @@ LOG_LEVEL=INFO
 # Valeur par défaut: true
 LOG_TO_FILE=true
 
+# ===== TIMEZONE =====
+# Fuseau horaire pour l'affichage des dates et heures
+# Format: IANA timezone identifier (ex: Europe/Paris, America/New_York)
+# Valeur par défaut: Europe/Paris
+TIMEZONE=Europe/Paris
+
 # Activer les couleurs dans les logs console (true/false)
 # Utile pour désactiver les couleurs si votre terminal ne les supporte pas
 # Variables spéciales: NO_COLOR=1 (force désactiver), FORCE_COLOR=1 (force activer)
