--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "security:fix": "npm audit fix",
     "docker:build": "docker build -t discord-reminder-bot .",
     "docker:run": "docker-compose up",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up"
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:drop": "drizzle-kit drop"
   },
   "keywords": [
     "discord",
@@ -56,24 +61,25 @@
   },
   "homepage": "https://github.com/alex-jordan547/discord-reminder-bot#readme",
   "dependencies": {
-    "@fastify/env": "^4.2.0",
+    "better-sqlite3": "^12.2.0",
     "chalk": "^5.3.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.44.5",
     "fastify": "^4.24.3",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3",
-    "sqlite3": "^5.1.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/eslint": "^9.6.1",
     "@types/node": "^20.8.10",
-    "@types/sqlite3": "^3.1.9",
-    "@typescript-eslint/parser": "^8.41.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "@vitest/coverage-v8": "^0.34.6",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
