--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,137 +2,118 @@ name: Tests et Validation
 
 on:
   push:
-    branches: [ main, develop, feature/* ]
+    branches: [ * ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, preprod ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        node-version: [18, 20, 21]
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - name: Setup Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
       with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Cache pip dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-        pip install pytest-cov pytest-asyncio
+      run: npm ci
 
-    - name: Set up test environment
-      run: |
-        cp .env.example .env
-        echo "DISCORD_TOKEN=test_token_for_ci" >> .env
-        echo "TEST_MODE=true" >> .env
-        echo "SQLITE_STORAGE=true" >> .env
-        echo "LOG_LEVEL=ERROR" >> .env
+    - name: Type checking
+      run: npm run type-check:strict
 
-    - name: Run linting
-      run: |
-        make format-check
-        make lint || true  # Ne pas échouer sur les warnings de lint
+    - name: Linting
+      run: npm run lint:strict
 
-    - name: Run unit tests
-      run: |
-        make test-unit
+    - name: Format check
+      run: npm run format:check
 
-    - name: Run integration tests
-      run: |
-        make test-integration
+    - name: Security audit
+      run: npm run security:audit
 
-    - name: Run comprehensive tests
-      run: |
-        make test-comprehensive
+    - name: Run tests with coverage
+      run: npm run test:coverage
 
-    - name: Generate coverage report
-      run: |
-        make test-coverage
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage reports
+      uses: codecov/codecov-action@v4
+      if: matrix.node-version == 20
       with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
+        token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: false
 
-  validate:
+  performance-tests:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event_name == 'pull_request'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run performance tests
+      run: npm run test:performance
+
+  regression-tests:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event_name == 'pull_request' && contains(github.head_ref, 'release/')
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run regression tests
+      run: npm run test:regression
+
+  database-tests:
     runs-on: ubuntu-latest
     needs: test
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
-        python-version: 3.9
+        node-version: 20
+        cache: 'npm'
 
     - name: Install dependencies
+      run: npm ci
+
+    - name: Setup test database
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        npm run db:generate
+        npm run db:migrate
 
-    - name: Set up test environment
-      run: |
-        cp .env.example .env
-        echo "DISCORD_TOKEN=test_token_for_ci" >> .env
-        echo "TEST_MODE=true" >> .env
+    - name: Run database tests
+      run: npm run test -- tests/db/ tests/persistence/
 
-    - name: Run final validation
-      run: |
-        python validate_final.py
-
-    - name: Test bot startup (dry run)
-      run: |
-        timeout 10s python bot.py || true
-
-  security:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install bandit safety
-
-    - name: Run security scan with bandit
-      run: |
-        bandit -r . -f json -o bandit-report.json || true
-
-    - name: Check dependencies for vulnerabilities
-      run: |
-        safety check --json --output safety-report.json || true
-
-    - name: Upload security reports
-      uses: actions/upload-artifact@v3
-      with:
-        name: security-reports
-        path: |
-          bandit-report.json
-          safety-report.json
+    - name: Clean up
+      run: rm -f discord_bot.db*
