--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,44 +54,44 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
     
     - name: Install dependencies
       run: |
-        npm ci
+        yarn install --frozen-lockfile
     
     - name: Code quality checks
       run: |
         # Formatage avec Prettier
-        npm run format:check
+        yarn format:check
         
         # Linting avec ESLint
-        npm run lint:strict
+        yarn lint:strict
         
         # Type checking avec TypeScript
-        npm run type-check:strict
+        yarn type-check:strict
     
     - name: Security checks
       run: |
-        # Audit des dépendances npm
-        npm run security:audit
+        # Audit des dépendances Yarn
+        yarn security:audit
     
     - name: Unit tests
       run: |
         # Tests avec Vitest et coverage
-        npm run test:coverage
+        yarn test:coverage
     
     - name: Performance tests
       if: github.event_name == 'pull_request'
       run: |
         # Tests de performance
-        npm run test:performance
+        yarn test:performance
     
     - name: Build test
       run: |
         # Test du build
-        npm run clean
-        npm run build
+        yarn clean
+        yarn build
     
     - name: Upload coverage to Codecov
       if: matrix.node-version == 20
