feat: add Vite configuration and nodemon setup for improved development workflow

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-reminder-bot",
   "version": "2.0.0",
   "description": "Discord bot for event reminder management with reaction tracking",
-  "main": "dist/src/bot.js",
+  "main": "dist/index.js",
   "type": "module",
   "imports": {
     "#/*": "./src/*"
@@ -12,34 +12,25 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "nodemon --exec tsx src/index.ts",
-    "start": "node dist/src/bot.js",
-    "build": "tsc",
-    "build:watch": "tsc --watch",
+    "dev": "tsx watch src/index.ts",
+    "dev:build": "concurrently -n \"build,bot\" -c \"cyan,green\" \"vite build --config vite.config.dev.ts --watch\" \"nodemon --watch dist/dev --delay 2 dist/dev/index.js\"",
+    "dev:direct": "tsx src/index.ts",
+    "start": "node dist/index.js",
+    "build": "vite build",
+    "build:dev": "vite build --config vite.config.dev.ts",
     "clean": "rm -rf dist",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
-    "test:performance": "vitest --run tests/**/*performance*",
-    "test:regression": "vitest --run tests/**/*regression*",
-    "lint": "eslint src",
+    "lint": "eslint src --max-warnings 0",
     "lint:fix": "eslint src --fix",
-    "lint:strict": "eslint src --max-warnings 0",
-    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
-    "type-check:strict": "tsc --noEmit --strict",
-    "quality:all": "npm run lint:strict && npm run format:check && npm run type-check:strict && npm run test:coverage",
-    "security:audit": "npm audit --audit-level=moderate",
-    "security:fix": "npm audit fix",
-    "docker:build": "docker build -t discord-reminder-bot .",
-    "docker:run": "docker-compose up",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
+    "quality": "yarn lint && yarn format:check && yarn type-check && yarn test",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "db:drop": "drizzle-kit drop"
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [
     "discord",
@@ -79,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "@vitest/coverage-v8": "^0.34.6",
+    "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
@@ -88,6 +80,10 @@
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "^3.0.0",
+    "vite-plugin-node-polyfills": "^0.21.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6"
   },
   "packageManager": "yarn@1.22.22"
