--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
     "quality": "yarn lint && yarn format:check && yarn type-check && yarn test",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:backup": "./scripts/backup-db.sh",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:restart": "docker-compose restart",
+    "docker:rebuild": "yarn db:backup && docker-compose up --build -d",
+    "docker:logs": "docker-compose logs -f",
+    "docker:down": "docker-compose down"
   },
   "keywords": [
     "discord",
@@ -52,6 +59,8 @@
   },
   "homepage": "https://github.com/alex-jordan547/discord-reminder-bot#readme",
   "dependencies": {
+    "@fastify/cors": "^9.0.0",
+    "@fastify/rate-limit": "^9.0.0",
     "better-sqlite3": "^12.2.0",
     "chalk": "^5.3.0",
     "discord.js": "^14.14.1",
