--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "dev": "tsx watch src/index.ts",
     "dev:build": "concurrently -n \"build,bot\" -c \"cyan,green\" \"vite build --config vite.config.dev.ts --watch\" \"nodemon --watch dist/dev --delay 2 dist/dev/index.js\"",
     "dev:direct": "tsx src/index.ts",
+    "dev:ui": "vite --config vite.config.dashboard.ts",
     "start": "node dist/index.js",
     "build": "vite build",
     "build:dev": "vite build --config vite.config.dev.ts",
+    "build:ui": "vite build --config vite.config.dashboard.ts",
     "clean": "rm -rf dist",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --config vitest.config.dashboard.ts --run",
+    "test:ui:watch": "vitest --config vitest.config.dashboard.ts --watch",
+    "test:ui:coverage": "vitest --config vitest.config.dashboard.ts --coverage",
     "lint": "eslint src --max-warnings 0",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
-    "quality": "yarn lint && yarn format:check && yarn type-check && yarn test",
+    "quality": "yarn lint && yarn format:check && yarn type-check && yarn test && yarn test:ui",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -63,12 +68,17 @@
     "@fastify/rate-limit": "^9.0.0",
     "better-sqlite3": "^12.2.0",
     "chalk": "^5.3.0",
+    "chart.js": "^4.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.44.5",
     "fastify": "^4.24.3",
+    "pinia": "^2.1.0",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3",
+    "vue": "^3.4.0",
+    "vue-chartjs": "^5.3.0",
+    "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -76,14 +86,18 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/eslint": "^9.6.1",
     "@types/node": "^20.8.10",
+    "@types/ws": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/coverage-v8": "^0.34.6",
+    "@vue/test-utils": "^2.4.0",
     "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "jsdom": "^24.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "tsx": "^4.20.5",
