--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.44.5",
     "fastify": "^4.24.3",
+    "pg": "^8.16.3",
     "pinia": "^2.1.0",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3",
@@ -86,6 +87,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/eslint": "^9.6.1",
     "@types/node": "^20.8.10",
+    "@types/pg": "^8.15.5",
     "@types/ws": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
