--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
   },
   "dependencies": {
     "chart.js": "^4.4.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
-    "vue-chartjs": "^5.3.0"
+    "vue-chartjs": "^5.3.0",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
@@ -38,6 +40,7 @@
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0",
     "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.0.0"
   }
