--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.0",
     "@fastify/rate-limit": "^9.0.0",
+    "@fastify/websocket": "^8.3.1",
     "better-sqlite3": "^12.2.0",
     "chalk": "^5.3.0",
     "discord.js": "^14.14.1",
